[package]
name = "servo_pico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp-pico = "0.3.0"
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"
embedded-time = "0.12.1"
embedded-hal = "0.2.7"
cortex-m = "0.7.4"
